SDIT-1184 KeyWorkerResource